--- a/src/Client/wwwroot/appsettings.json
+++ b/src/Client/wwwroot/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "Auth0": {
+    "Audience": "https://archives.dyndns.org",
     "Authority": "https://dev-60pojokn.us.auth0.com",
-    "ClientId": "fRTy3YL9QD4DS3iEbRAHEowl3voiddUA"
+    "ClientId": "gZp6JDlXFlcgR4HGvVA5E0h9kFY8eIhy"
   }
 }
