--- a/src/Server/appsettings.Development.json
+++ b/src/Server/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=Database.sqlite"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,7 +11,7 @@
   },
   "Auth0": {
     "Authority": "https://dev-60pojokn.us.auth0.com",
-    "ApiIdentifier": "https://thearchives.dyndns.org"
+    "ApiIdentifier": "https://localhost:44378"
   },
   "Elastic": {
     "Uri": "http://localhost:9200/",
