--- a/src/Server/appsettings.json
+++ b/src/Server/appsettings.json
@@ -9,5 +9,16 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0": {
+    "Authority": "",
+    "ApiIdentifier": ""
+  },
+  "Elastic": {
+    "Uri": "",
+    "DefaultIndex": ""
+  },
+  "Content": {
+    "BaseDir": ""
+  }
 }
