Removing pesky backslashes

--- a/src/Server/TheArchives.Server.csproj
+++ b/src/Server/TheArchives.Server.csproj
@@ -13,8 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Client\TheArchives.Client.csproj" />
-    <ProjectReference Include="..\Shared\TheArchives.Shared.csproj" />
+    <ProjectReference Include="../Client/TheArchives.Client.csproj" />
+    <ProjectReference Include="../Shared/TheArchives.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
