--- a/tests/TheArchives.Client.Tests.Unit/TheArchives.Client.Tests.Unit.csproj
+++ b/tests/TheArchives.Client.Tests.Unit/TheArchives.Client.Tests.Unit.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Client\TheArchives.Client.csproj" />
+    <ProjectReference Include="../../src/Client/TheArchives.Client.csproj" />
   </ItemGroup>
 
 </Project>
