--- a/src/Client/TheArchives.Client.csproj
+++ b/src/Client/TheArchives.Client.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shared\TheArchives.Shared.csproj" />
+    <ProjectReference Include="../Shared/TheArchives.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
