--- a/tests/TheArchives.Server.Tests.Unit/TheArchives.Server.Tests.Unit.csproj
+++ b/tests/TheArchives.Server.Tests.Unit/TheArchives.Server.Tests.Unit.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Server\TheArchives.Server.csproj" />
+    <ProjectReference Include="../../src/Server/TheArchives.Server.csproj" />
   </ItemGroup>
 
 </Project>
