Adding verbosity to github script commands

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,4 +18,4 @@ jobs:
           dotnet-version: 6.0.100-preview.3.21202.5
 
       - name: Test
-        run: dotnet test
+        run: dotnet test -v n
