--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,11 +26,8 @@ jobs:
         with:
           dotnet-version: 6.0.100-preview.3.21202.5
 
-      - name: Build
-        run: dotnet build -c Release
-
       - name: Publish
-        run: dotnet publish ./src/Server/TheArchives.Server.csproj -o ./publish -c Release
+        run: dotnet publish ./src/Server/TheArchives.Server.csproj -o ./publish -c Release -v n
 
       - name: Deploy
         run: rsync -avuz ./publish/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/the-archives/publish-swap/
