--- a/src/Client/wwwroot/manifest.json
+++ b/src/Client/wwwroot/manifest.json
@@ -4,12 +4,18 @@
   "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#33c3f0",
+  "theme_color": "##33c3f0",
+  "prefer_related_applications": false,
   "icons": [
     {
       "src": "icon-512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "icon-192.png",
+      "type": "image/png",
+      "sizes": "192x192"
     }
   ]
 }
