--- a/src/Server/appsettings.json
+++ b/src/Server/appsettings.json
@@ -2,14 +2,15 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=Database.sqlite"
   },
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
     }
   },
-  "AllowedHosts": "*",
   "Auth0": {
     "Authority": "",
     "ApiIdentifier": ""
@@ -20,5 +21,6 @@
   },
   "Content": {
     "BaseDir": ""
-  }
+  },
+  "AllowedHosts": "*"
 }
